@@ -88,7 +88,6 @@ typedef struct window_struct
   NODE **nodes;                 /* Array of nodes visited in this window. */
   int *pagetops;                /* For each node in NODES, the pagetop. */
   long *points;                 /* For each node in NODES, the point. */
-  int current;                  /* Index in NODES of the current node. */
   int nodes_index;              /* Index where to add the next node. */
   int nodes_slots;              /* Number of slots allocated to NODES. */
 } WINDOW;
